Labo 05 - Kubernetes/deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heig-vd-devops-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: kubernetes.docker.internal
    - http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: registry.gitlab.com/kevinauberson/dop-python-kevin/frontend:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - port: 80
      targetPort: web
  selector:
    app: frontend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - image: registry.gitlab.com/kevinauberson/dop-python-kevin/backend:latest
        name: backend
        ports:
        - containerPort: 80
          name: web

---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
  - port: 80
  selector:
    app: backend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  selector:
    matchLabels:
      app: database
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: database-data-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  ports:
    - port: 5432
      targetPort: postgres
  selector:
    app: database
